wrapped up all responsive bugs

--- a/views/stylesheets/partials/_projects.sass
+++ b/views/stylesheets/partials/_projects.sass
@@ -229,7 +229,7 @@
   width: 1150px
   height: 780px
 
-@media (max-width: $screen-xs-max)
+@media (max-width: $screen-xs)
 
   .project-tile-wrap
     height: 300px
@@ -241,7 +241,7 @@
     margin-bottom: 15px
 
   .bg
-    padding: 20px 0
+    padding: 30px 0
     img
       margin: 30px 0
       padding: 50px
@@ -315,7 +315,7 @@
     .row
       margin-bottom: 30px
   .info 
-    margin-top: 100px
+    margin-top: 50px
 
   .full-width-block
     img
