--- a/views/stylesheets/partials/_type.sass
+++ b/views/stylesheets/partials/_type.sass
@@ -5,7 +5,7 @@ p
   margin: auto
   margin-bottom: 35px
   text-decoration: none
-  max-width: 700px
+  max-width: 702px
   color: #858585
   text-align: center
   a 
@@ -234,3 +234,19 @@ ul.tags li
 
   .info p
     max-width: 80%
+
+  .about
+  p
+    max-width: 630px
+
+@media (max-width: 770px)
+
+  .project-tile-wrap a h1
+    font-size: 40px
+    padding-top: 27%
+
+@media (max-width: 609px)
+
+  .project-tile-wrap a h1
+    font-size: 30px
+    padding-top: 33%
